karikatur-template-1.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CloudFormation Template was written for 
  running Cartoon-Karikatur Static Website on EC2. 
  Cartoon-Karikatur Static Website will be 
  deployed on Amazon Linux 2 
  (ami-0b5eea76982371e91) EC2 Instance with 
  custom security group which allows http 
  connections on port 80 and ssh port 22 from 
  anywhere. Cartoon-Karikatur Static Website 
  is downloaded from my Public Github repository,
  then deployed on Apache Web Server. 

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection.
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91
      InstanceType: t2.micro
      KeyName: first-key
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html
            FOLDER="https://raw.githubusercontent.com/fevzibayrak/cartoon-karikatur/main/static-web"
            wget ${FOLDER}index.html
            wget ${FOLDER}kar1.jpg
            wget ${FOLDER}kar2.jpg
            wget ${FOLDER}kar3.jpg
            wget ${FOLDER}kar4.jpg
            wget ${FOLDER}kar5.jpg
            wget ${FOLDER}kar6.jpg
            wget ${FOLDER}kar7.jpg
            wget ${FOLDER}kar8.jpg
            wget ${FOLDER}kar9.jpg
            wget ${FOLDER}kar10.jpg
            systemctl start httpd
            systemctl enable httpd 
Outputs:
  WebsiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
