karikatur-template-2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    This CloudFormation Template was written for running Karikatur Static Website on EC2.
    Karikatur Static Website will be deployed on Amazon Linux 2 (XXXXXXXXXXXX) EC2 Instance 
    with custom security group which allows http connections on port 80 and ssh port 22 from anywhere.
    Karikatur Static Website is downloaded from my Public Github repository, then deployed on Apache Web Server.

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0b5eea76982371e91
      InstanceType: t2.micro
      KeyName: first-key
      SecurityGroupIds:
        -  !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData: 
        Fn::Base64: 
          |
            #! /bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            chmod 777 /var/www/html
            cd /var/www/html
            yum install git -y
            git clone https://github.com/fevzibayrak/cartoon-karikatur/tree/main/static-web
            systemctl restart httpd
            systemctl enable httpd /var/www/html/index.html
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
